# awe-sqlite3

./: .gitignore  CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json
lib/: index.cjs  index.js
src/: awe-sqlite3-close.c  awe-sqlite3-exec.c  awe-sqlite3-open.c  awe-sqlite3.c  awe-sqlite3.h
test/: sqlite3-open.test.js
